<resources>
    <string name="app_name">Recommender App</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="select_movie_preferences">Select Movie Preferences</string>
    <string name="select_music_preferences">Select Music Preferences</string>
    <string name="save_preferences">Save Preferences</string>
    <string name="preference_selection">Preference</string>
    <string name="recommended_content">Recommended Content</string>
    <string name="home_icon">Home</string>
    <string name="movie_icon">Movies</string>
    <string name="music_icon">Music</string>
    <string name="profile_icon">Profile</string>
    <string name="movie_recommendations">Movie Recommendations</string>
    <string name="music_recommendations">Music Recommendations</string>
    <string name="movies">Movies</string>
    <string name="music">Music</string>
    <string name="Details">Details</string>
    <string name="home">home</string>
    <string name="user_profile">UserProfile</string>
    <string name="help">Help</string>
    <string name="tfe_re_recommendation_text">Our Recommendation for you</string>
    <string name="tfe_re_instructions">Please select your favourite movies</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="button_preferences">GENRE PREFERENCES</string>
    <string name="button_movie_wishlist">CHECK MOVIE WISHLIST</string>
    <string name="button_music_wishlist">CHECK MUSIC WISHLIST</string>
    <string name="button_save_changes">SAVE CHANGES</string>
    <string name="button_logout">LOGOUT</string>
    <string name="mu_re_instructions">Please select your favourite music</string>
    <string name="confirm_password">Confirm password</string>

</resources>
